--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ name = "pypi"
 [packages]
 Django = "==5.1.3"
 djangorestframework = "==3.15.2"
+django-rest-swagger = "==2.2.0"
 drf-yasg = "==1.21.8"
 flake8 = "==7.1.1"
-psycopg2 = "==2.9.10"
+psycopg2-binary = "==2.9.9"
+python-dotenv = "==1.0.1"
